--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       </ul>
     </div>
 
+
+    <form id="delete-task-form" action="#" method="post">
+      <input type="submit" value="Delete All Tasks">
+    </form>
+  
+
     <script src="./src/index.js"></script>
   </div>
 
